Test/Files/Parser/FullParserTestCases/FullTests/Out/testcase02_02.out


Parse error on line 1:
class main {	public stati
------^
Expecting 'ID'